Blender 2.64 Crash #32856

Closed
opened 2012-10-12 14:14:12 +02:00 by Hikmet Koyuncu · 8 comments

%%%Intel Pentium Core 4 I5 2500K
Intel HD 3000
8 GB RAM
Windows 7 Ultimate 64-bit
Blender 2.64 - 64-bit

This is a Ben Dansie's Flame Simulation file. Open this file and press "ALT + A". Play animation and after then Blender crash.

Link: http://blenderartists.org/forum/attachment.php?attachmentid=75121&d=1244811254
%%%

%%%Intel Pentium Core 4 I5 2500K Intel HD 3000 8 GB RAM Windows 7 Ultimate 64-bit Blender 2.64 - 64-bit This is a Ben Dansie's Flame Simulation file. Open this file and press "ALT + A". Play animation and after then Blender crash. Link: http://blenderartists.org/forum/attachment.php?attachmentid=75121&d=1244811254 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%And this file...

Link: http://download.blender.org/durian/Durian_Fire_BD_1.blend%%%

%%%And this file... Link: http://download.blender.org/durian/Durian_Fire_BD_1.blend%%%

%%%Crash confirmed with SVN 51302. (Windows 7 x64) %%%

%%%Crash confirmed with SVN 51302. (Windows 7 x64) %%%

%%%Jeroen, could you please check on this? Thanks!%%%

%%%Jeroen, could you please check on this? Thanks!%%%
Member

%%%The issue is that the La place node has two output sockets. This happens sometimes when migrating between blender versions. You can remove the node and create that again and everything works. Laplace 0.5 fac and it works.%%%

%%%The issue is that the La place node has two output sockets. This happens sometimes when migrating between blender versions. You can remove the node and create that again and everything works. Laplace 0.5 fac and it works.%%%
Member

%%%During the loading of the file the do_versions will create new output sockets. of the laplace node. this is because the DYNAMIC flag is set for that socket. As discussed this flag should not be set.
node_socket.c: the verify_socket_template will fail and add the new socket
add breakpoint with node->type == 212 and watch for the node with the name "La place"

IMO we should unset the DYNIMAC FLAG (this is never done), we only set the flag for group nodes and some other nodes.
do_versions_nodetree_dynamic_sockets

Hope this helps
Assigning to Lukas%%%

%%%During the loading of the file the do_versions will create new output sockets. of the laplace node. this is because the DYNAMIC flag is set for that socket. As discussed this flag should not be set. node_socket.c: the verify_socket_template will fail and add the new socket add breakpoint with node->type == 212 and watch for the node with the name "La place" IMO we should unset the DYNIMAC FLAG (this is never done), we only set the flag for group nodes and some other nodes. do_versions_nodetree_dynamic_sockets Hope this helps Assigning to Lukas%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32856
No description provided.